# persistent-cognitive-infrastructure

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  NOTICE  README.md  SECURITY.md  TRADEMARK_POLICY.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  design_change.yml
.github/workflows/: ci.yml  secret-scan.yml  security.yml
deployments/: docker-compose.yml
docs/: architecture.md  interview-notes.md  linting-testing-standards.md
docs/adr/: 0001-main-design-choice.md
docs/api/: openapi.yaml
docs/architecture/: blueprint.md  claim-lifecycle.md  deployment-topology.md  event-system.md  governance.md  memory-engine.md  reconciliation-engine.md  runtime-primitives.md  semantic-data-model.md  service-boundaries.md  workload-scheduler.md
docs/diagrams/: deployment-topology.mmd  pci-system.mmd  workload-sequence.mmd
docs/repository/: public-protection.md  quality-gates.md  (+1 more)
scripts/: dev.sh  verify.sh
services/control-plane/: Dockerfile  pyproject.toml
services/control-plane/app/: __init__.py  main.py
services/control-plane/app/api/: routes.py
services/control-plane/app/core/: config.py
services/control-plane/app/domain/: __init__.py  models.py
services/control-plane/app/runtime/: __init__.py  confidence.py  memory.py  reconciliation.py  scheduler.py
services/control-plane/app/workflows/: __init__.py  workload.py
services/control-plane/tests/: test_api_routes.py  test_runtime_contracts.py
(+62 files in other folders)
